--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,7 +13,7 @@ spring:
   # JPA - Local Settings
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
 
   # Redis - Local
@@ -25,6 +25,10 @@ spring:
 # Server
 server:
   port: 8080
+
+# CORS
+cors:
+  allowed-origins: http://localhost:5173
 
 # Logging - Debug level for local
 logging:
@@ -44,7 +48,7 @@ discord:
   bot:
     token: ${DISCORD_BOT_TOKEN:your-bot-token}
   oauth:
-    redirect-uri: http://localhost:8080/api/auth/callback
+    redirect-uri: http://localhost:5173/api/auth/callback
 
 openai:
   api:
