🔒 chore(security): 테스트 시크릿 Gitleaks allowlist 설정
- .gitleaks.toml 추가: 테스트용 시크릿 패턴 허용
- application.yml: 보안 주석 강화 (테스트 전용 명시)

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -44,7 +44,9 @@ discord:
     token-url: http://localhost:8080/mock/oauth2/token
     user-info-url: http://localhost:8080/mock/users/@me
 
-# JWT (test-only secret - safe to hardcode for tests)
+# JWT Configuration (test-only)
+# SECURITY: This is a test-only secret with NO production value.
+# Allowlisted in .gitleaks.toml - DO NOT use in production.
 jwt:
   secret: test-jwt-secret-key-must-be-at-least-256-bits-long-for-hs256
   access-token-expiration: 3600000
@@ -60,6 +62,7 @@ logging:
     com.vatti.chzscout: DEBUG
     org.hibernate.SQL: DEBUG
 
-# Encryption (test-only key - safe to hardcode for tests)
+# Encryption (test-only)
+# SECURITY: Allowlisted in .gitleaks.toml - DO NOT use in production.
 encryption:
   key: test-only-encryption-key-32chars!
