--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
 	testImplementation 'org.springframework.boot:spring-boot-restclient-test'
 	testImplementation 'org.wiremock:wiremock-standalone:3.10.0'
 	testImplementation 'com.github.codemonstur:embedded-redis:1.4.3'
