🔧 chore: JaCoCo 커버리지 설정 및 OpenAI 설정 추가
- JaCoCo 커버리지 제외: ai/infrastructure, prompt 패키지
- OpenAI API 설정 추가 (application.yml)
- build.gradle에 OpenAI SDK 의존성 추가
- TagService 미사용 코드 제거

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 	// Discord Bot (JDA)
 	implementation 'net.dv8tion:JDA:5.5.1'
 
+	// OpenAI Java SDK
+	implementation 'com.openai:openai-java:4.13.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
