--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-restclient'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// Swagger (SpringDoc OpenAPI) - Spring Boot 4.0.0 requires v3.0.0+
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'
