👷 ci(cd): Docker 정리를 pull 전후로 강화
- [Pull 전] docker system prune -af --volumes 추가로 디스크 공간 확보
- [Pull 후] docker image prune -af로 교체된 이전 이미지 정리
- 디스크 부족으로 인한 배포 실패 방지

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -81,14 +81,17 @@ jobs:
             export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
             export IMAGE_TAG=${{ github.sha }}
 
+            # [Pull 전] 디스크 공간 확보 (미사용 이미지, 컨테이너, 볼륨 정리)
+            docker system prune -af --volumes || true
+
             # 새 이미지 가져오기
             docker compose -f docker-compose.yml -f docker-compose.prod.yml pull app
 
             # 컨테이너 강제 재생성 (새 이미지 적용 보장)
             docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d --force-recreate --no-deps app
 
-            # 사용하지 않는 이미지 정리 (디스크 공간 확보)
-            docker image prune -f
+            # [Pull 후] 교체된 이전 이미지 정리
+            docker image prune -af
 
             # 배포된 이미지 버전 확인
             echo "=== Deployed Image ==="
