✅ test: 벡터 임베딩 및 추천 기능 테스트 추가
- EmbeddingServiceTest: 임베딩 생성 및 유사도 검색 테스트
- StreamEmbeddingSyncServiceTest: 동기화 로직 테스트
- VectorRecommendServiceTest: 추천 서비스 단위 테스트
- StreamEmbeddingRepositoryIntegrationTest: pgvector 통합 테스트
- VectorTypeTest: Hibernate 커스텀 타입 테스트
- MessageListenerTest: 벡터 추천 통합 테스트 추가
- StreamCacheSchedulerTest: 리팩토링에 맞게 테스트 수정

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -29,6 +29,10 @@ logging:
     com.vatti.chzscout: DEBUG
     org.hibernate.SQL: DEBUG
 
+# Encryption (dummy key for test)
+encryption:
+  key: test-encryption-key-12345
+
 # External API Keys (dummy values for test)
 chzzk:
   api:
@@ -45,3 +49,9 @@ openai:
     key: test-api-key
     model: gpt-5-nano
     base-url: https://api.openai.com
+
+# Embedding Settings (테스트용)
+embedding:
+  model: text-embedding-3-small
+  dimensions: 1536
+  batch-size: 100
