🗃️ chore: MySQL에서 PostgreSQL + pgvector로 마이그레이션
- application-prod/dev/local.yml: MySQL → PostgreSQL 드라이버 및 URL 변경
- application-local.yml: 하드코딩된 비밀번호 제거
- test/application.yml: H2 MODE=MySQL → MODE=PostgreSQL
- CLAUDE.md: 문서에서 MySQL 언급을 PostgreSQL로 업데이트

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,11 +1,11 @@
 # Production Profile
 spring:
-  # Database - Production MySQL
+  # Database - Production PostgreSQL + pgvector
   datasource:
-    url: jdbc:mysql://${DB_HOST}:${DB_PORT:3306}/${DB_NAME}?useSSL=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT:5432}/${DB_NAME}?sslmode=require
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 20
       minimum-idle: 10
