--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 # Development Profile
 spring:
-  # Database - Dev MySQL
+  # Database - Dev PostgreSQL + pgvector
   datasource:
-    url: jdbc:mysql://${DB_HOST:dev-db-host}:${DB_PORT:3306}/${DB_NAME:chz_scout}?useSSL=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:postgresql://${DB_HOST:dev-db-host}:${DB_PORT:5432}/${DB_NAME:chz_scout}?sslmode=require
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
       minimum-idle: 5
