--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,9 +2,9 @@
 spring:
   profiles:
     active: test
-  # H2 In-Memory Database for Testing
+  # H2 In-Memory Database for Testing (PostgreSQL 호환 모드)
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
     username: sa
     password:
